[gd_scene load_steps=37 format=3 uid="uid://ba367s8eqyefw"]

[ext_resource type="Script" path="res://Scripts/Player/player_Top_Down.gd" id="1_wgq34"]
[ext_resource type="Texture2D" uid="uid://cdg8u5mruhvt1" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/14-Hit Sword/Hit Sword 01.png" id="2_sk7eq"]
[ext_resource type="Texture2D" uid="uid://dt50mg8wnph7k" path="res://Treasure Hunters/EpisodeSix/16-Attack 2/Attack 2 01.png" id="3_oqdyt"]
[ext_resource type="Texture2D" uid="uid://ddg13l44xbso0" path="res://Treasure Hunters/EpisodeSix/16-Attack 2/Attack 2 02.png" id="4_l2n3r"]
[ext_resource type="Texture2D" uid="uid://cooa7vy78hdol" path="res://Treasure Hunters/EpisodeSix/16-Attack 2/Attack 2 03.png" id="5_o3kum"]
[ext_resource type="Texture2D" uid="uid://c7a2agobyy2dd" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/12-Fall Sword/Fall Sword 01.png" id="6_kmf8l"]
[ext_resource type="Texture2D" uid="uid://cia0ocs05nena" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/14-Hit Sword/Hit Sword 02.png" id="7_8fv6a"]
[ext_resource type="Texture2D" uid="uid://dhjuxx0e13k2v" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/14-Hit Sword/Hit Sword 03.png" id="8_x2on5"]
[ext_resource type="Texture2D" uid="uid://qexgtg12b1rc" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/14-Hit Sword/Hit Sword 04.png" id="9_baqx0"]
[ext_resource type="Texture2D" uid="uid://dd6b6occxfqw5" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 05.png" id="10_5k4l5"]
[ext_resource type="Texture2D" uid="uid://c3fak7cxu04nc" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 02.png" id="11_snvmp"]
[ext_resource type="Texture2D" uid="uid://b38u03ttl12w6" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 03.png" id="12_grbvi"]
[ext_resource type="Texture2D" uid="uid://dofv6ip252crs" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 04.png" id="13_hdc1g"]
[ext_resource type="Texture2D" uid="uid://xapye8tj5lcu" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 01.png" id="14_trefa"]
[ext_resource type="Texture2D" uid="uid://c2ic16hsma0t4" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 02.png" id="15_2rd6s"]
[ext_resource type="Texture2D" uid="uid://bnph71e6e5wvk" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 03.png" id="16_et7tv"]
[ext_resource type="Texture2D" uid="uid://c367k4bhd02f5" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 04.png" id="17_1qxrf"]
[ext_resource type="Texture2D" uid="uid://cgv6cnwdmbtq6" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 05.png" id="18_geidc"]
[ext_resource type="Texture2D" uid="uid://cee1ufhe6w3t1" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 06.png" id="19_1v5ri"]
[ext_resource type="Texture2D" uid="uid://lgehhvtddq2g" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 01.png" id="20_pv753"]
[ext_resource type="Texture2D" uid="uid://cl8fr5ghwkyvg" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 02.png" id="21_f1r52"]
[ext_resource type="Texture2D" uid="uid://6xnc6ipe8nho" path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 03.png" id="22_iq27y"]
[ext_resource type="AudioStream" uid="uid://cstd61yc3e4xs" path="res://Audio/SFX/player_jump.wav" id="23_jrwup"]
[ext_resource type="AudioStream" uid="uid://2y7q1mirg6yf" path="res://Audio/SFX/sword_attack.wav" id="24_wkqro"]
[ext_resource type="AudioStream" uid="uid://bhb7tf0ynvjvx" path="res://Audio/SFX/player_respawn.wav" id="25_7m7aj"]
[ext_resource type="AudioStream" uid="uid://bg5jl3bp3e6bp" path="res://Audio/SFX/player_hit.wav" id="26_fxv0t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ec2j7"]
radius = 9.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wp7u5"]
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n3tid"]
radius = 7.07107

[sub_resource type="Animation" id="Animation_uenqb"]
resource_name = "Attack"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("3_oqdyt"), ExtResource("4_l2n3r"), ExtResource("5_o3kum")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uupur"]
resource_name = "Fall"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_kmf8l")]
}

[sub_resource type="Animation" id="Animation_empn5"]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_sk7eq"), ExtResource("2_sk7eq"), ExtResource("7_8fv6a"), ExtResource("8_x2on5"), ExtResource("9_baqx0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4xc2a"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("10_5k4l5"), ExtResource("11_snvmp"), ExtResource("12_grbvi"), ExtResource("13_hdc1g"), ExtResource("10_5k4l5")]
}

[sub_resource type="Animation" id="Animation_67hdn"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("14_trefa"), ExtResource("15_2rd6s"), ExtResource("16_et7tv"), ExtResource("17_1qxrf"), ExtResource("18_geidc"), ExtResource("19_1v5ri")]
}

[sub_resource type="Animation" id="Animation_vobqt"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("20_pv753"), ExtResource("21_f1r52"), ExtResource("22_iq27y")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4fg6b"]
_data = {
"Attack": SubResource("Animation_uenqb"),
"Fall": SubResource("Animation_uupur"),
"Hit": SubResource("Animation_empn5"),
"Idle": SubResource("Animation_4xc2a"),
"Run": SubResource("Animation_67hdn"),
"jump": SubResource("Animation_vobqt")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_wgq34")

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_ec2j7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_oqdyt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_wp7u5")

[node name="CameraComponent" type="Camera2D" parent="."]

[node name="AttackArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(18, 5)
rotation = -1.57079
shape = SubResource("CircleShape2D_n3tid")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4fg6b")
}

[node name="PlayerJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_jrwup")
volume_db = -10.0

[node name="SwordAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_wkqro")
volume_db = -20.0

[node name="PlayerRespawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_7m7aj")

[node name="PlayerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_fxv0t")
